--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ header .logo {
 	padding-right: 5%;
 }
 
+.contactissues img {
+	margin-bottom: 20px;
+}
+
 .socialtext {
 	display: inline;
 	vertical-align: top;
